# vtk-pipeline

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  link_qt.cmake  link_vtk.cmake  variables.cmake
source/: CMakeLists.txt  main.cpp  vtk-pipeline.qrc  vtk-pipeline.rc
source/constraint/: item_in_view.hpp
source/style/qss/: flatwhite.css
source/utils/: better_enum.h  enum.h  flat_style.hpp  helper_ui.cpp  helper_ui.h  macros.h
source/vtk_fitter/: vtkContourFilterDelegate.cpp  vtkContourFilterDelegate.hpp  vtkOutlineFilterDelegate.cpp  vtkOutlineFilterDelegate.hpp
source/vtk_mapper/: vtkMapperData.hpp  vtkPolyDataMapperDelegate.cpp  vtkPolyDataMapperDelegate.hpp
source/vtk_output/: EmbeddedQVTKRenderWidget.cpp  EmbeddedQVTKRenderWidget.hpp  vtkImageViewer.cpp  vtkImageViewer.hpp  vtkImageViewerDelegate.cpp  vtkImageViewerDelegate.hpp
source/vtk_output/gltf/: vtkGLTFImporterDelegate.cpp  vtkGLTFImporterDelegate.hpp
source/vtk_output/image/: vtkImageViewerDelegate.cpp  vtkImageViewerDelegate.hpp  vtkimageviewerwidget.cpp  vtkimageviewerwidget.h  vtkimageviewerwidget.ui
source/vtk_output/render_window/: vtkGenericOpenGLRenderWindowDelegate.cpp  vtkGenericOpenGLRenderWindowDelegate.hpp
source/vtk_pipeline/: data_view_light_style.hpp  vtk_pipeline_model.cpp  vtk_pipeline_model.hpp  vtk_pipeline_scene.cpp  vtk_pipeline_scene.hpp  vtk_pipeline_view.cpp  vtk_pipeline_view.hpp
source/vtk_process/: vtkActorData.cpp  vtkActorData.hpp  vtkActorDelegate.cpp  vtkActorDelegate.hpp  vtkImageResizeDelegate.cpp  vtkImageResizeDelegate.hpp  vtkPolyDataNormalsDelegate.cpp  vtkPolyDataNormalsDelegate.hpp  vtkRendererData.hpp  vtkRendererDelegate.cpp  vtkRendererDelegate.hpp
source/vtk_shapes/: vtk_base_shape.hpp  vtk_shape.cpp  vtk_shape.hpp  vtk_shape_category.cpp  vtk_shape_category.hpp  vtk_shape_type.hpp  vtk_shapes_model.cpp  vtk_shapes_model.hpp  vtk_shapes_view.cpp  vtk_shapes_view.hpp
source/vtk_source/: GenericSourceReader.cpp  GenericSourceReader.hpp  TextData.hpp  VtkAlgorithmOutputData.hpp  vtkFilePathSelector.cpp  vtkFilePathSelector.hpp  vtkImageData.cpp  vtkImageData.hpp  vtkPNGReaderDelegate.cpp  vtkPNGReaderDelegate.hpp  vtkPolyData.cpp  vtkPolyData.hpp  vtkRectilinearGrid.cpp  vtkRectilinearGrid.hpp  vtkStructuredGrid.cpp  vtkStructuredGrid.hpp  vtkUnstructuredGrid.cpp  vtkUnstructuredGrid.hpp  vtkfilepathselectorwidget.cpp
source/vtk_source/color/: ColorData.hpp  vtkColorPicker.cpp  vtkColorPicker.hpp
source/vtk_source/decimal/: DecimalData.hpp  NumberSourceDataModel.cpp  NumberSourceDataModel.hpp
source/vtk_source/file_path/: FilePathData.hpp  vtkFilePathSelector.cpp  vtkFilePathSelector.hpp  vtkfilepathselectorwidget.h  vtkfilepathselectorwidget.ui
source/vtk_source/jpg/: vtkJPGReaderDelegate.cpp  vtkJPGReaderDelegate.hpp
source/vtk_source/png/: vtkPNGReaderDelegate.cpp  vtkPNGReaderDelegate.hpp
source/vtk_source/slice/: SliceData.hpp  vtkSliceSelector.cpp  vtkSliceSelector.hpp  vtksliceselectorwidget.cpp  vtksliceselectorwidget.h  vtksliceselectorwidget.ui
source/vtk_source/volumn/: vtkVolume16ReaderDelegate.cpp  vtkVolume16ReaderDelegate.hpp
source/widgets/: mainwindow.cpp  mainwindow.h  mainwindow.ui
source/widgets/bottom_left_menu/: bottom_left_menu_model.cpp  bottom_left_menu_model.hpp  bottom_left_menu_view.cpp  bottom_left_menu_view.hpp
source/widgets/vtk_shapes/: vtk_shapes_model.hpp  vtk_shapes_view.hpp
